--- a/Components/Pages/Login.razor
+++ b/Components/Pages/Login.razor
@@ -102,7 +102,7 @@
                 if (hashedPassword == user.Password)
                 {
                     _globalState.CurrentUser = user;
-                    NavManager.NavigateTo("/counter");
+                    NavManager.NavigateTo("/customerorder");
                 }
                 else
                 {
