--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -11,7 +11,8 @@
     .nav-item-custom {
         display: flex;
         align-items: center;
-        padding: 1rem 1rem;
+        padding: 1rem 1rem; 
+
     }
 </style>
 
@@ -24,7 +25,7 @@
         </div>
         <div class="nav-item-custom">
             <NavLink class="nav-link" href="customerorder" style="color: sandybrown;">
-                <span class="bi bi-clipboard2-check-fill" style="color: white;"></span> Customer Order
+                <span class="bi bi-clipboard2-check-fill" style="color: white;"></span>Order
             </NavLink>
         </div>
         <div class="nav-item-custom">
@@ -32,7 +33,7 @@
                 <span class="bi bi-people-fill" style="color: white;"></span> Users
             </NavLink>
         </div>
-        <div class="nav-item-custom">
+        <div class="nav-item-custom" >
             <NavLink class="nav-link" href="coffee" style="color: sandybrown;">
                 <span class="bi bi-cup-fill" style="color: white;"></span> Coffee
             </NavLink>
