--- a/Components/Pages/Customer.razor
+++ b/Components/Pages/Customer.razor
@@ -29,42 +29,42 @@
                 <td>@data.Status</td>
                 <td>@data.CreatedAt.ToShortDateString()</td>
                 @* <td>@data.CreatedBy</td> *@
-            <td>
-            <button class="btn btn-outline-secondary" type="button"
+                <td>
+                    <button class="btn btn-outline-secondary" type="button"
                             @onclick="()=>OpenEditCustomerDialog(data)">
-            <span class="oi oi-pencil" /> Edit
-            </button>
+                        <span class="oi oi-pencil" /> Edit
+                    </button>
                     <button class="btn btn-outline-danger" type="button" @onclick="()=>OpenDeleteCustomerDialog(data)">
-            <span class="oi oi-delete" /> Delete
-            </button>
-            </td>
+                        <span class="oi oi-delete" /> Delete
+                    </button>
+                </td>
             </tr>
         }
     </tbody>
 </table>
 @if (_showAddCustomerDialog)
 {
-    <ModalDialog Title="Add User" OnClose="@OnAddCustomerDialogClose" OkLabel="Add">
+    <ModalDialog Title="@_dialogTitle" OkLabel="@_dialogOkLabel" OnClose="@OnAddCustomerDialogClose">
         <form>
             <div class="form-floating mb-3">
                 <input type="text" class="form-control " @bind="_name" placeholder="Name" />
                 <label for="floatingInput">Name</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control " @bind="_number" placeholder="Number" />
+                <input type="number" class="form-control " @bind="_number" placeholder="Number" />
                 <label for="floatingPassword">Number</label>
             </div>
             <div class="form-floating mb-3">
-                <select class="form-select" @bind="_status" >
+                <select class="form-select" @bind="_status">
                     <option>Select Status</option>
-                    <option >Normal</option>
-                    <option >Member</option>
+                    <option>Normal</option>
+                    <option>Member</option>
                 </select>
                 <label for="floatingPassword">Status</label>
             </div>
-            @if (!string.IsNullOrEmpty(_addUserErrorMessage))
+            @if (!string.IsNullOrEmpty(_addCustomerErrorMessage))
             {
-                <AlertMessage Type="danger" Message="@_addUserErrorMessage" />
+                <AlertMessage Type="danger" Message="@_addCustomerErrorMessage" />
             }
 
         </form>
@@ -78,7 +78,7 @@
     private GlobalState _globalState { get; set; }
     private bool _showAddCustomerDialog { get; set; }
     private List<Customers> _customer { get; set; }
-    private string _addUserErrorMessage { get; set; }
+    private string _addCustomerErrorMessage { get; set; }
     private string _dialogTitle { get; set; }
     private string _dialogOkLabel { get; set; }
 
@@ -88,6 +88,8 @@
     }
     private void OpenAddCustomerDialog()
     {
+        _dialogTitle = "Add Customer";
+        _dialogOkLabel = "Add";
         _showAddCustomerDialog = true;
         _name = "";
         _number = "";
@@ -105,23 +107,30 @@
         {
             try
             {
-                _addUserErrorMessage = "";
-                if (!string.IsNullOrEmpty(_name) && !string.IsNullOrEmpty(_number.ToString()))
+                _addCustomerErrorMessage = "";
+                if (!string.IsNullOrEmpty(_name) && !string.IsNullOrEmpty(_number.ToString()) && !string.IsNullOrEmpty(_status.ToString()))
                 {
                     List<Customers> cus = CustomerService.GetAll();
+                    Customers checkNumb = cus.FirstOrDefault(x => x.Number == _number);
+
                     if (string.IsNullOrEmpty(_id.ToString()))
                     {
-
-                        cus.Add(
-                            new Customers
-                                {
-                                    Name = _name,
-                                    Number = _number,
-                                    CreatedAt = DateTime.Now,
-                                    Status = _status,
-                                }
-                            );
-
+                        if (checkNumb == null)
+                        {
+                            cus.Add(
+                                new Customers
+                                    {
+                                        Name = _name,
+                                        Number = _number,
+                                        CreatedAt = DateTime.Now,
+                                        Status = _status,
+                                    }
+                                );
+                        }
+                        else
+                        {
+                            throw new Exception("Number already exist!!");
+                        }
                     }
                     else
                     {
@@ -146,7 +155,7 @@
                 }
                 else
                 {
-                    throw new Exception("name or price are empty");
+                    throw new Exception("name or Number or status are empty");
                 }
 
 
@@ -154,15 +163,15 @@
             }
             catch (Exception e)
             {
-                _addUserErrorMessage = e.Message;
+                _addCustomerErrorMessage = e.Message;
             }
         }
     }
 
     private void OpenEditCustomerDialog(Customers cus)
     {
-        _dialogTitle = "Edit Todo";
-        _dialogOkLabel = "Save";
+        _dialogTitle = "Edit Customer";
+        _dialogOkLabel = "Update";
         _name = cus.Name;
         _number = cus.Number;
         _status = cus.Status;
@@ -192,11 +201,11 @@
             _customer = CustomerService.GetAll();
 
         }
-        catch
+        catch (Exception e)
         {
-            
+            _addCustomerErrorMessage = e.Message;
         }
-       
+
 
     }
 }
