--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@using Bislerium.Data
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Bislerium</a>
+        <a class="navbar-brand" href="#">Bislerium Cafe</a>
     </div>
 </div>
 
@@ -18,29 +18,29 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item-custom">
-            <NavLink class="nav-link" href="customers" style="color: sandybrown;">
+            <NavLink class="nav-link" href="customers" style="color: lawngreen;">
                 <span class="bi bi-person-fill" style="color: white;"></span> Customer
             </NavLink>
         </div>
         <div class="nav-item-custom">
-            <NavLink class="nav-link" href="customerorder" style="color: sandybrown;">
+            <NavLink class="nav-link" href="customerorder" style="color: lawngreen;">
                 <span class="bi bi-clipboard2-check-fill" style="color: white;"></span>Order
             </NavLink>
         </div>
         @if (UserRole.ToString() == "Admin")
         {
             <div class="nav-item-custom">
-                <NavLink class="nav-link" href="users" style="color: sandybrown;">
+                <NavLink class="nav-link" href="users" style="color: lawngreen;">
                     <span class="bi bi-people-fill" style="color: white;"></span> Users
                 </NavLink>
             </div>
             <div class="nav-item-custom">
-                <NavLink class="nav-link" href="coffee" style="color: sandybrown;">
+                <NavLink class="nav-link" href="coffee" style="color: lawngreen;">
                     <span class="bi bi-cup-fill" style="color: white;"></span> Coffee
                 </NavLink>
             </div>
             <div class="nav-item-custom">
-                <NavLink class="nav-link" href="add-ins" style="color: sandybrown;">
+                <NavLink class="nav-link" href="add-ins" style="color: lawngreen;">
                     <span class="bi bi-plus-circle-fill" style="color: white;"></span> Add-ins
                 </NavLink>
             </div>
