--- a/Components/Pages/Customer.razor
+++ b/Components/Pages/Customer.razor
@@ -50,7 +50,7 @@
             </div>
             <div class="form-floating mb-3">
                 <input type="number" class="form-control " @bind="_number" placeholder="Number" />
-                <label for="floatingPassword">Number</label>
+                <label for="floatingPassword">Phone Number</label>
             </div>
             <div class="form-floating mb-3">
                 <select class="form-select" @bind="_status">
