--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -16,6 +16,7 @@
 </style>
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
+    <div class="nav-item px-3"><h5 class="text-light">Welcome <strong>@Username</strong>!</h5></div>
     <nav class="flex-column">
         <div class="nav-item-custom">
             <NavLink class="nav-link" href="customers" style="color: lawngreen;">
